fix: Initialize Google Auth plugin for Android
- Add Google Auth config to capacitor.config.ts (serverClientId)
- Add server_client_id to strings.xml
- Initialize GoogleAuth in MainActivity.onCreate()
- Fix NullPointerException in native Google Sign-In

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_main">Alerta Chart</string>
     <string name="package_name">com.kriptokirmizi.alerta</string>
     <string name="custom_url_scheme">com.kriptokirmizi.alerta</string>
+    <string name="server_client_id">776781271347-ergb3kc3djjen47loq61icptau51rk4m.apps.googleusercontent.com</string>
 </resources>
